package org.example.designpatterns.structural;

public interface DrawingAPIBridge {
    void drawCircle(int x, int y, int radius);
}
