package org.example.solid.interfacesp;

public interface Fly {
    public void fly();
}
